<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/expanderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/expander"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/pickPoisonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/expanderTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/pickPoison"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/quickEatsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pickPoisonTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:text="@string/quickEats" />

    <Button
        android:id="@+id/restaurantsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quickEatsButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:text="@string/restaurants" />

    <Button
        android:id="@+id/instantQueueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/restaurantsButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="startInstantQueue"
        android:text="@string/instantQueue" />

    <Button
        android:id="@+id/suggestedForYouButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instantQueueButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="startSuggestedForYou"
        android:text="@string/suggestedForYou" />

    <SurfaceView
        android:id="@+id/colorView"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignLeft="@+id/suggestedForYouButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/colorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/colorView"
        android:layout_alignRight="@+id/suggestedForYouButton"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>